# target-redshift

./: .gitignore  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
target_redshift/: connector.py  sinks.py  target.py
