[project]
name = "target-redshift"
version = "0.2.1"
description = "`target-redshift` is a Singer target for Redshift, built with the Meltano Singer SDK."
authors = [{ name = "Tobias Cadee", email = "tobias.cadee@ticketswap.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Redshift",
]
dependencies = [
    "singer-sdk~=0.48.0",
    "redshift-connector>=2.1.5,<3",
    "boto3>=1.37.19,<2",
    "sqlalchemy-redshift>=0.8.14,<0.9",
    "psycopg2-binary>=2.9.10,<3",
    "simplejson>=3.20.1,<4",
    "smart-open>=7.1.0,<8",
]

[project.optional-dependencies]
s3 = ["fs-s3fs~=1.1.1"]

[project.scripts]
target-redshift = "target_redshift.target:TargetRedshift.cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "singer-sdk[testing]~=0.44.3",
    "ipykernel>=6.29.5,<7",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1,<2"]

[tool.ruff]
src = ["target_redshift"]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_redshift"]

[tool.ruff.lint.pydocstyle]
convention = "google"
